--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="facebook-domain-verification" content="r9z536gfnz4pndgpyw1x4pi4e3k3sj" />
 </head>
 <body>
   <app-root></app-root>
